[#152] Display trials identifiers in their details' page
