# test/fixtures/api/swagger.yaml
@@ -395,6 +395,11 @@ definitions:
     properties:
       id:
         type: string
+      identifiers:
+        type: object
+        description: Object that maps the Trial's sources ids with its identifiers.
+      primary_source_id:
+        type: string
       url:
         type: string
       public_title:
@@ -589,6 +594,11 @@ definitions:
     properties:
       id:
         type: string
+      identifiers:
+        type: object
+        description: Object that maps the Trial's sources ids with its identifiers.
+      primary_source_id:
+        type: string
       url:
         type: string
       trial_id:
@@ -621,12 +631,15 @@ definitions:
   Publication:
     required:
       - id
+      - url
       - source
       - source_url
       - title
       - abstract
     properties:
       id:
+        type: string
+      url:
         type: string
       source:
         $ref: '#/definitions/Source'
@@ -646,7 +659,6 @@ definitions:
         type: array
         items:
           type: string
-
       journal:
         type: string
       date:
@@ -654,11 +666,6 @@ definitions:
         format: date-time
       slug:
         type: string
-      facts:
-        type: array
-        items:
-          type: string
-
 
   RecordSummary:
     required:
@@ -676,10 +683,13 @@ definitions:
   PublicationSummary:
     required:
       - id
+      - url
       - title
       - source
     properties:
       id:
+        type: string
+      url:
         type: string
       title:
         type: string
